# I2-Data-Intelligence

./: .env.example  DOCKER_SETUP.md  IMPLEMENTATION_COMPLETE.md  README.md  docker-compose.yml  prometheus.yml  requirements.txt  verify.sh
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial_schema.py
data/synthetic/: equipment_telemetry.csv  occupancy_energy.csv
db/: __init__.py  migrations.py
digitaltwinml/: .env.example  .gitignore  I2-T1_COMPLETION_REPORT.md  IMPLEMENTATION_COMPLETE.md  README.md  README_t1.md  docker-compose.yml  pyproject.toml  requirements.txt  verify.sh
digitaltwinml/.viz/: kedro_pipeline_events.json  stats.json
digitaltwinml/conf/: logging.yml
digitaltwinml/realtime/: .env.example  Dockerfile
i2-data/: init.sql
i2-t5-fastapi/: README.md  requirements.txt
i2-t5-fastapi/app/: auth.py  config.py  database.py  main.py
infra/mlflow/: Dockerfile
infra/mosquitto/: mosquitto.conf
member3_broadcast/: .code-workspace  .env.example  Dockerfile  README.md  SRS.md  pyproject.toml
member3_broadcast/app/: __init__.py  config.py  main.py  models.py  security.py  services.py
member3_broadcast/member3_realtime_websocket.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
member3_broadcast/tests/: test_models.py  test_security.py  test_services.py
mlruns/0/: meta.yaml
mlruns/575143896819972732/: meta.yaml
mlruns/757974836050262917/: meta.yaml
mlruns/854200804800573504/: meta.yaml
realtime/: .env.example  package.json
realtime/src/: index.js
schema/: schema.sql
src/api/: websocket_server.py
src/data/: features.py  (+2 more)
(+101 files in other folders)
